Proyecto Final commit

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             </select><br>
         
             <label for="opcion-cuerpo">Zona del cuerpo:</label>
+            <label for="zona-personalizada-input" id="label-zona-personalizada">Zona personalizada:</label>
+            <input type="text" id="zona-personalizada-input" style="display: none;">
+
             <select id="opcion-cuerpo">
                 <option value="Brazo">Brazo</option>
                 <option value="Pierna">Pierna</option>
